base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx-app
          image: nginx:alpine
          ports:
            - containerPort: 80
