base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-frontend-service
  labels:
    app.kubernetes.io/component: frontend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-frontend-deployment
  labels:
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend-app
          image: nginx:alpine
          ports:
            - containerPort: 80
